[BUG] z-index issue

--- a/stylesheets/css/style.css
+++ b/stylesheets/css/style.css
@@ -193,7 +193,7 @@ body { margin: 0; font-family: 'Shades', Helvetica, Georgia; -webkit-touch-callo
 
 .hidden { position: absolute; bottom: 0; visibility: hidden; }
 
-.adt, .ads, .ad { width: 100%; margin: 0; padding: 0; border: none; background: none; height: 60px; z-index: 1002; position: absolute; bottom: 0; }
+.adt, .ads, .ad { width: 100%; margin: 0; padding: 0; border: none; background: none; height: 60px; position: absolute; bottom: 0; z-index: 1002; }
 .adt.adf, .ads.adf, .ad.adf { display: block !important; bottom: 50%; opacity: 0.001; }
 
 .adt { z-index: 1003; }
